--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -3,4 +3,4 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="Please Select"
-    android:textColor="@color/colorPrimary" />
+    android:textColor="@color/primary" />
