--- a/app/src/main/res/layout/activity_pomodoro.xml
+++ b/app/src/main/res/layout/activity_pomodoro.xml
@@ -1,26 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:background="@color/primary"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.activities.PomodoroActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <TextView
+        android:id="@+id/txt_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_margin="@dimen/fab_margin"
+        android:gravity="center_horizontal"
+        android:textColor="@color/icons"
+        android:textSize="24sp"
+        tools:text="@string/sample_title" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/txt_title">
+
+        <com.github.lzyzsd.circleprogress.ArcProgress
+            android:id="@+id/progress"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="50dp"
+            custom:arc_bottom_text="88:88"
+            custom:arc_bottom_text_size="20sp"
+            custom:arc_finished_color="@color/accent"
+            custom:arc_max="100"
+            custom:arc_progress="0"
+            custom:arc_stroke_width="15dp"
+            custom:arc_suffix_text_size="0sp"
+            custom:arc_text_color="@color/icons"
+            custom:arc_text_size="0sp"
+            custom:arc_unfinished_color="@color/icons" />
+
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/btn_primary"
+            style="@style/trellodoro_button"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            fancy:fb_borderColor="@android:color/transparent"
+            fancy:fb_defaultColor="@android:color/transparent"
+            fancy:fb_fontIconResource="@string/icon_play"
+            fancy:fb_fontIconSize="70sp"
+            fancy:fb_textColor="@color/icons" />
+
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/btn_secondary"
+            style="@style/trellodoro_button"
+            android:layout_width="125dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/progress"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            fancy:fb_borderColor="@color/icons"
+            fancy:fb_defaultColor="@android:color/transparent"
+            fancy:fb_fontIconResource="@string/icon_beer"
+            fancy:fb_textColor="@color/icons" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="@dimen/fab_margin"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:shadowColor="@color/icons"
+                android:text="@string/icon_timer"
+                android:textColor="@color/accent"
+                android:textSize="25sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/timeleft_less_than_minute"
+                android:textColor="@color/icons" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="@dimen/fab_margin"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:shadowColor="@color/icons"
+                android:text="@string/icon_pomo"
+                android:textColor="@color/accent"
+                android:textSize="25sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/txt_total_time"
+                android:textColor="@color/icons" />
+        </LinearLayout>
+    </RelativeLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:orientation="vertical"
+        tools:showIn="@layout/activity_main">
+
+        <TextView
+            android:id="@+id/pomodoro_description"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textColor="@color/icons"
+            tools:text="Working on Pomdoro #3" />
 
-    </android.support.design.widget.AppBarLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    <include layout="@layout/content_pomodoro" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btn_task_todo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@android:drawable/ic_dialog_email" />
 
-</android.support.design.widget.CoordinatorLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btn_task_done"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@android:drawable/ic_dialog_email" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+</RelativeLayout>
