--- a/app/src/main/res/layout/activity_wizard_config.xml
+++ b/app/src/main/res/layout/activity_wizard_config.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:background="@color/colorPrimary"
+        android:background="@color/primary"
         android:orientation="vertical" >
 
         <View
