--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -23,7 +23,6 @@
         <item name="android:paddingLeft">5dp</item>
         <item name="android:paddingRight">5dp</item>
         <item name="android:paddingTop">10dp</item>
-        <item name="android:layout_margin">5dp</item>
         <item name="fb_iconFont">appicons.ttf</item>
         <item name="fb_fontIconSize">20sp</item>
         <item name="fb_borderColor">#FFFFFF</item>
@@ -31,7 +30,7 @@
         <item name="fb_defaultColor">#7ab800</item>
         <item name="fb_focusColor">#9bd823</item>
         <item name="fb_iconPosition">left</item>
-        <item name="fb_radius">30dp</item>
+        <item name="fb_radius">100dp</item>
         <item name="fb_textColor">#FFFFFF</item>
     </style>
 
