--- a/app/src/main/res/layout/list_item_tasks.xml
+++ b/app/src/main/res/layout/list_item_tasks.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
-    android:background="@drawable/card_background_white"
-    android:minHeight="340dp"
-    android:orientation="vertical" >
+    android:layout_height="100dp"
+    android:layout_margin="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:background="@drawable/google_cards_background_bottom"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txt_title"
@@ -23,25 +21,19 @@
             android:layout_marginTop="16dp"
             android:text="Sample title"
             android:textColor="@color/primary"
-            android:textSize="24sp" />
+            android:textSize="18sp" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/btn_test"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right" >
+            android:layout_margin="8dp"
+            android:padding="8dp"
+            android:background="@color/accent"
+            android:text="Test Click"
+            android:textColor="@color/primary"
+            android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/btn_test"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:padding="8dp"
-                android:text="Tes Click"
-                android:textColor="@color/primary"
-                android:textSize="14sp" />
-
-        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
