--- a/app/src/main/res/layout/fragment_tab_tasks_list.xml
+++ b/app/src/main/res/layout/fragment_tab_tasks_list.xml
@@ -4,7 +4,7 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primary_light"
+        android:background="@color/list_background"
         android:cacheColorHint="@android:color/transparent"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
