--- a/app/src/main/res/layout/fragment_wizard_board.xml
+++ b/app/src/main/res/layout/fragment_wizard_board.xml
@@ -1,26 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/fragment_wizard_board">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:gravity="center"
         android:orientation="vertical" >
+
+        <com.joanzapata.iconify.widget.IconTextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:text="{typcn-th-large-outline}"
+            android:textColor="@color/primary_light"
+            android:textSize="130sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:text="@string/lbl_board_title"
+            android:textColor="@color/icons"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/fragment_wizard_universal_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:gravity="center"
+            android:maxLines="3"
+            android:text="@string/lbl_board_message"
+            android:textColor="@color/icons"
+            android:textSize="12sp" />
 
         <Spinner
             android:id="@+id/spinnerstate"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
+
 </RelativeLayout>
