--- a/app/src/main/res/layout/fragment_wizard_lists.xml
+++ b/app/src/main/res/layout/fragment_wizard_lists.xml
@@ -3,57 +3,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/fragment_wizard_lists">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:gravity="center"
         android:orientation="vertical" >
-        <TextView
-            android:id="@+id/txttodo"
+        <com.joanzapata.iconify.widget.IconTextView
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:text="{typcn-th-list-outline}"
+            android:textColor="@color/primary_light"
+            android:textSize="130sp" />
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:text="To Do"
-            />
+            android:layout_marginBottom="16dp"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:text="@string/lbl_board_title"
+            android:textColor="@android:color/white"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_5"
+            android:gravity="left"
+            android:maxLines="3"
+            android:text="@string/lbl_list_todo_message"
+            android:textColor="@color/icons"
+            android:textSize="12sp" />
+
         <Spinner
             android:id="@+id/spinnertodo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="@dimen/margin_5" />
+
         <TextView
-            android:id="@+id/txtdoing"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:text="Doning"
-            />
+            android:layout_marginTop="@dimen/margin_5"
+            android:gravity="left"
+            android:maxLines="3"
+            android:text="@string/lbl_list_doing_message"
+            android:textColor="@color/icons"
+            android:textSize="12sp" />
+
         <Spinner
             android:id="@+id/spinnerdoing"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="@dimen/margin_5" />
+
         <TextView
-            android:id="@+id/txtdone"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:text="Done"
-            />
+            android:layout_marginTop="@dimen/margin_5"
+            android:gravity="left"
+            android:maxLines="3"
+            android:text="@string/lbl_list_done_message"
+            android:textColor="@color/icons"
+            android:textSize="12sp" />
+
         <Spinner
             android:id="@+id/spinnerdone"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="@dimen/margin_5" />
 
     </LinearLayout>
 </RelativeLayout>
