--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,5 +2,5 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:hint="Please Select"
-    android:textColor="@color/primary" />
+    android:hint="@string/txt_plases_select"
+    android:textColor="@color/primary_text" />
