--- a/app/src/main/res/layout/activity_pomodoro.xml
+++ b/app/src/main/res/layout/activity_pomodoro.xml
@@ -87,6 +87,7 @@
                 android:textSize="25sp" />
 
             <TextView
+                android:id="@+id/lbl_total_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/timeleft_less_than_minute"
@@ -111,6 +112,7 @@
                 android:textSize="25sp" />
 
             <TextView
+                android:id="@+id/lbl_total_pomodoros"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/txt_total_time"
